# pycoruBot

./: LICENSE  README.md  main.py  pyproject.toml
config/: __init__.py  administrators.py  config.yaml
core/: message.py  telegram_message_handler.py
core/cat/: cat_message_handler.py  cat_telegram_message_handler.py
core/help/: help_menu_composer.py  help_message_handler.py  help_telegram_message_handler.py
core/insult/: insult_message_handler.py  insult_telegram_message_handler.py
dependency_injection/: __init__.py  bot_di.py  cat_di.py  common.py  help_di.py  insult_di.py
shared/: environment_var_getter.py  logger.py  message_bus.py  message_sender.py  telegram_utils.py  telethon_utils.py  yaml_utils.py
